fix layout issues

--- a/frontend/src/styles/control.scss
+++ b/frontend/src/styles/control.scss
@@ -2,6 +2,8 @@
 
 .control {
   padding: 0px 1em;
+  background: white;
+  z-index: 22;
 
   &__content {
     display: flex;
